WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247517
[LFC][IFC] Incorrect overflowing content computation should not crash the process
https://bugs.webkit.org/show_bug.cgi?id=247517
Summary
[LFC][IFC] Incorrect overflowing content computation should not crash the pro...
zalan
Reported
2022-11-04 19:47:04 PDT
ssia
Attachments
Patch
(1.68 KB, patch)
2022-11-04 19:52 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2022-11-04 19:52:02 PDT
Created
attachment 463415
[details]
Patch
EWS
Comment 2
2022-11-05 13:23:18 PDT
Committed
256362@main
(063af4ab9155): <
https://commits.webkit.org/256362@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 463415
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-11-05 13:24:19 PDT
<
rdar://problem/102000420
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug