[LFC][IFC] Incorrect overflowing content computation should not crash the process https://bugs.webkit.org/show_bug.cgi?id=247517

Reviewed by Antti Koivisto.

Recover gracefully from not finding the overflowing run in the overflowing continuous content.

* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::processOverflowingContentWithText const):

Canonical link: https://commits.webkit.org/256362@main